style guide skeleton

--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -5,4 +5,5 @@
 <nav>
     <a href="/">Estimator</a>
     <a href="/contributors">Contributors</a>
+    <a href="/style-guide">Style Guide</a>
 </nav>
