--- a/templates/views/style-guide.hbs
+++ b/templates/views/style-guide.hbs
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Style Guide</title>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
@@ -28,6 +29,7 @@
         {{>footer}}
     </footer>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script type="text/javascript" src="/js/app.js"></script>
 </body>
 </html>
