--- a/templates/views/contributors.hbs
+++ b/templates/views/contributors.hbs
@@ -13,16 +13,18 @@
     <header>
         {{>header}}
     </header>
-    <section class="rename">
-        <div class="container">
-            <ul>
-                <li>
-                    <a class="box-item" href="https://github.com/3daddict">Mike Salvati</a>
 
+    <section class="contributors">
+        <div class="contributors__container">
+            <ul class="contributors__list">
+                <li class="contributors__person">
+                    <img class="contributors__image" src="https://avatars3.githubusercontent.com/u/29803478" alt="Mike Salvati">
+                    <a class="contributors__link" href="https://github.com/3daddict">Mike Salvati</a>
                 </li>
             </ul>
         </div>
     </section>
+
     <footer>
         {{>footer}}
     </footer>
