feat: adds lindsey wild to contributors

--- a/templates/views/contributors.hbs
+++ b/templates/views/contributors.hbs
@@ -13,6 +13,21 @@
     </div>
 </div>
 
+<section class="contributors">
+    <div class="contributors__container">
+        <ul class="contributors__list">
+            <li class="contributors__person">
+                <img class="contributors__image" src="https://avatars3.githubusercontent.com/u/29803478" alt="Mike Salvati">
+                <a class="contributors__link" href="https://github.com/3daddict">Mike Salvati</a>
+            </li>
+            <li class="contributors__person">
+                <img class="contributors__image" src="https://avatars0.githubusercontent.com/u/35239154" alt="Lindsey Wild">
+                <a class="contributors__link" href="https://github.com/lindseywild">Lindsey Wild</a>
+            </li>
+        </ul>
+    </div>
+</section>
+
 <footer>
     {{>footer}}
 </footer>
